--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 
 :root {
   --headline-color: white;
-  --background-color: #11151cba;
+  /* --background-color: #11151cba; */
+  --background-color: #08090fba;
   --text-color: #c4c4c4;
   --gene-color: #5f6b96;
 }
@@ -53,38 +54,117 @@ body {
   cursor: pointer;
 }
 
+/* MENU HAUT DROITE  */
+.menu-container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 2px;
+}
+
+.menu-item {
+  position: relative;
+  font-size: 0.7rem;
+  font-weight: bold;
+  color: #5b5b5b;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+  text-align: right;
+}
+
+.menu-item .text-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s cubic-bezier(0.68, -0.35, 0.265, 1.55);
+}
+
+.menu-item .text {
+  transform: translateY(0);
+}
+
+.menu-item .text-deep {
+  position: absolute;
+  top: 100%;
+  color: #eeeeee;
+}
+
+.menu-item:hover .text-wrapper {
+  transform: translateY(-100%);
+}
+
+
 
 /* SECTIONS  */
+section {
+  height: 100vh;
+  background-color: var(--background-color);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  text-align: center;
+}
+
+
 #section-1 {
   scroll-snap-align: start; 
   height: 100vh; 
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  background-color: var(--background-color);
   color: var(--headline-color);
 }
-#section-2 {
+#section-studio {
   scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  background-color: var(--background-color);
   color: var(--headline-color);
 }
 
-#section-3 {
+#section-concert {
   scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  background-color: var(--background-color);
   color: var(--headline-color);
 }
+
+#section-coutellerie {
+  scroll-snap-align: start; 
+  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: var(--headline-color);
+}
+
+#section-clips {
+  scroll-snap-align: start; 
+  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: var(--headline-color);
+}
+
+
 
 
 
