Modifs-MENU HAUT D02

--- a/loader/loader.css
+++ b/loader/loader.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #11151c;
+  background: #08090f;
   display: flex;
   justify-content: center;
   align-items: center;
