--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 :root {
   --headline-color: white;
   /* --background-color: #11151cba; */
-  --background-color: #08090fba;
+  --background-color: #08090f;
   --text-color: #c4c4c4;
   --gene-color: #5f6b96;
 }
