--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@
   scroll-behavior: smooth;
 }
 
-html,
+html {
+  scroll-behavior: auto; /* Désactiver le scroll-behavior natif */
+}
+
 body {
+  overflow-y: auto; /* Permettre le défilement fluide */
   display: flex;
   /* height: 100%; */
   margin: 0;
@@ -113,11 +117,18 @@ section {
   align-items: center;
   font-size: 3rem;
   text-align: center;
+  position: relative; /* Pour un meilleur positionnement */
 }
 
+#section-1,
+#section-studio,
+#section-concert,
+#section-coutellerie,
+#section-clips {
+  scroll-snap-align: none;
+}
 
 #section-1 {
-  scroll-snap-align: start; 
   height: 100vh; 
   justify-content: center;
   align-items: center;
@@ -125,7 +136,6 @@ section {
   color: var(--headline-color);
 }
 #section-studio {
-  scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
@@ -135,7 +145,6 @@ section {
 }
 
 #section-concert {
-  scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
@@ -145,7 +154,6 @@ section {
 }
 
 #section-coutellerie {
-  scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
@@ -155,7 +163,6 @@ section {
 }
 
 #section-clips {
-  scroll-snap-align: start; 
   height: 100vh; 
   display: flex;
   justify-content: center;
@@ -548,4 +555,3 @@ a:hover {
     line-height: 1.2;
   }
 }
-
